@@ -6,10 +6,12 @@ import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import no.nav.saf.domain.kode.Arkivsakssystem;
 import no.nav.saf.domain.kode.Journalposttype;
 import no.nav.saf.domain.kode.Journalstatus;
+import no.nav.saf.domain.visningsmodell.AvsenderMottaker;
 import no.nav.saf.domain.visningsmodell.DokumentInfo;
 import no.nav.saf.domain.visningsmodell.Journalpost;
 import no.nav.saf.endpoints.AbstractItest;
 import no.nav.saf.endpoints.graphql.GraphQLRequest;
+import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpMethod;
@@ -29,15 +31,22 @@ import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static com.github.tomakehurst.wiremock.client.WireMock.post;
 import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
 import static java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME;
+import static no.nav.saf.anticorruptionlayer.joark.domain.kode.Sakstype.FAGSAK;
 import static no.nav.saf.anticorruptionlayer.joark.domain.kode.Sakstype.GENERELL_SAK;
+import static no.nav.saf.domain.kode.Datotype.DATO_DOKUMENT;
 import static no.nav.saf.domain.kode.Datotype.DATO_EKSPEDERT;
 import static no.nav.saf.domain.kode.Dokumentstatus.FERDIGSTILT;
 import static no.nav.saf.domain.kode.Kanal.SDP;
+import static no.nav.saf.domain.kode.Kanal.SENTRAL_UTSKRIFT;
 import static no.nav.saf.domain.kode.Tema.FOR;
+import static no.nav.saf.domain.kode.Tema.PEN;
+import static no.nav.saf.domain.kode.Tema.UFO;
 import static no.nav.saf.domain.kode.Variantformat.ARKIV;
+import static no.nav.saf.domain.kode.Variantformat.PRODUKSJON;
 import static no.nav.saf.domain.visningsmodell.BrukerIdType.AKTOERID;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
+import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -62,22 +71,15 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnTilknyttedeJournalposter() throws Exception {
 		abacPermit();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_not_bid-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-not-bid-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter, hasSize(1));
-		Journalpost journalpost = tilknyttedeJournalposter.get(0);
+		Journalpost journalpost = tilknyttedeJournalposter.getFirst();
 
 		assertThat(journalpost.getJournalpostId(), is(JOURNALPOST_ID));
 		assertThat(journalpost.getTittel(), is("En søknad om noe"));
@@ -126,20 +128,102 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	}
 
 	@Test
+	void shouldReturnTilknyttedeJournalposterPsak() throws Exception {
+		abacPermit();
+		stubPensjonBrukerForSak();
+		stubPensjonSakSammendrag();
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
+				.willReturn(aResponse().withStatus(OK.value())
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-psak-utgaaende-happy.json")));
+		stubPdl();
+
+		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
+		assertThat(tilknyttedeJournalposter, hasSize(1));
+		Journalpost journalpost = tilknyttedeJournalposter.getFirst();
+
+		assertThat(journalpost.getJournalpostId(), is(JOURNALPOST_ID));
+		assertThat(journalpost.getTittel(), is("Vedtak – omregning fra uføretrygd til alderspensjon"));
+		assertThat(journalpost.getJournalposttype(), is(Journalposttype.U));
+		assertThat(journalpost.getJournalstatus(), is(Journalstatus.FERDIGSTILT));
+		assertThat(journalpost.getTema(), is(UFO));
+		assertThat(journalpost.getTemanavn(), is(UFO.getTemanavn()));
+		assertThat(journalpost.getBehandlingstema(), nullValue());
+		assertThat(journalpost.getBehandlingstemanavn(), nullValue());
+		assertThat(journalpost.getSak().getArkivsaksnummer(), is("21998969"));
+		assertThat(journalpost.getSak().getArkivsaksystem(), is(Arkivsakssystem.PSAK));
+		assertThat(journalpost.getSak().getTema(), is(UFO));
+		assertThat(journalpost.getSak().getFagsakId(), is("21998969"));
+		assertThat(journalpost.getSak().getFagsaksystem(), is("PP01"));
+		assertThat(journalpost.getSak().getDatoOpprettet(), is(LocalDateTime.parse("2015-06-01T00:00:00", ISO_LOCAL_DATE_TIME)));
+		assertThat(journalpost.getSak().getSakstype(), is(FAGSAK));
+		assertThat(journalpost.getBruker().getId(), is("1912374211459"));
+		assertThat(journalpost.getBruker().getType(), is(AKTOERID));
+		assertThat(journalpost.getAvsenderMottaker().getId(), is("10525619171"));
+		assertThat(journalpost.getAvsenderMottaker().getNavn(), is("FISKEBOLLE FROM"));
+		assertThat(journalpost.getAvsenderMottaker().getLand(), is("NO"));
+		assertTrue(journalpost.getAvsenderMottaker().isErLikBruker());
+		assertThat(journalpost.getAvsenderMottakerId(), is("10525619171"));
+		assertThat(journalpost.getAvsenderMottakerNavn(), is("FISKEBOLLE FROM"));
+		assertThat(journalpost.getAvsenderMottakerLand(), is("NO"));
+		assertThat(journalpost.getJournalforendeEnhet(), is("4808"));
+		assertThat(journalpost.getJournalfoerendeEnhet(), is("4808"));
+		assertThat(journalpost.getJournalfortAvNavn(), is("PESYS_MASKINELL"));
+		assertThat(journalpost.getOpprettetAvNavn(), is("PESYS_MASKINELL"));
+		assertThat(journalpost.getKanal(), is(SENTRAL_UTSKRIFT));
+		assertThat(journalpost.getKanalnavn(), is(SENTRAL_UTSKRIFT.getKanalnavn()));
+		assertThat(journalpost.getDatoOpprettet(), notNullValue());
+		assertThat(journalpost.getRelevanteDatoer().get(0).getDatotype(), is(DATO_DOKUMENT));
+		assertThat(journalpost.getTilleggsopplysninger(), hasSize(0));
+		assertThat(journalpost.getDokumenter(), hasSize(4));
+
+		DokumentInfo dokumentInfo1 = journalpost.getDokumenter().getFirst();
+		assertThat(dokumentInfo1.getDokumentInfoId(), is("500000000"));
+		assertThat(dokumentInfo1.getTittel(), is("Vedtak – omregning fra uføretrygd til alderspensjon"));
+		assertThat(dokumentInfo1.getBrevkode(), is("000086"));
+		assertThat(dokumentInfo1.getDokumentstatus(), is(FERDIGSTILT));
+		assertThat(dokumentInfo1.getOriginalJournalpostId(), is(JOURNALPOST_ID));
+		assertThat(dokumentInfo1.getLogiskeVedlegg(), hasSize(0));
+		assertThat(dokumentInfo1.getDokumentvarianter(), hasSize(2));
+		assertThat(dokumentInfo1.getDokumentvarianter().get(0).getVariantformat(), is(ARKIV));
+		assertTrue(dokumentInfo1.getDokumentvarianter().get(0).isSaksbehandlerHarTilgang());
+		assertThat(dokumentInfo1.getDokumentvarianter().get(1).getVariantformat(), is(PRODUKSJON));
+		assertTrue(dokumentInfo1.getDokumentvarianter().get(1).isSaksbehandlerHarTilgang());
+	}
+
+	@Test
+	void shouldReturnTilknyttedeJournalposterWithEmptyAvsendermottakerWhenOriginalAvsendermottakerIsNull() throws Exception {
+		abacPermit();
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
+				.willReturn(aResponse().withStatus(OK.value())
+						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-no-avsendermottaker-happy.json")));
+		stubPdl();
+
+		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
+		assertThat(tilknyttedeJournalposter, hasSize(1));
+		Journalpost journalpost = tilknyttedeJournalposter.getFirst();
+
+		assertThat(journalpost.getJournalpostId(), is(JOURNALPOST_ID));
+
+		assertThat(journalpost.getAvsenderMottaker(), notNullValue(AvsenderMottaker.class));
+		assertThat(journalpost.getAvsenderMottaker().getId(), nullValue());
+		assertThat(journalpost.getAvsenderMottaker().getNavn(), nullValue());
+		assertThat(journalpost.getAvsenderMottaker().getLand(), nullValue());
+		assertThat(journalpost.getAvsenderMottaker().isErLikBruker(), is(false));
+		assertThat(journalpost.getAvsenderMottakerId(), nullValue());
+		assertThat(journalpost.getAvsenderMottakerNavn(), nullValue());
+		assertThat(journalpost.getAvsenderMottakerLand(), nullValue());
+	}
+
+	@Test
 	void shouldReturnNoJournalpostsWhenDenyOnPep1g() throws Exception {
 		abacDenyPep1g();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_not_bid-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-not-bid-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter, hasSize(0));
@@ -148,18 +232,11 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnNoJournalpostsWhenDenyOnPep2() throws Exception {
 		abacDenyPep2();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_far-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-far-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter, hasSize(0));
@@ -168,18 +245,11 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnSaksbehandlerTilgangFalseWhenDenyOnPep2d() throws Exception {
 		abacDenyPep2dSkipPep2();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_not_bid-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-not-bid-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		DokumentInfo dokumentInfo = tilknyttedeJournalposter.get(0).getDokumenter().get(0);
@@ -189,10 +259,10 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnNoJournalpostsWhenDenyOnPep3() throws Exception {
 		abacDenyPep3SkipPep2();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_bid-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-bid-happy.json")));
 		stubFor(get("/gsak/" + GSAK_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
@@ -201,14 +271,7 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("bidrag/bidragsak-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter, hasSize(0));
@@ -217,18 +280,11 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnNoJournalpostWhenDenyOnPep4() throws Exception {
 		abacDenyPep4SkipPep2Pep3();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_jp_pol_skjerming-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-skjerming-jp-pol-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter, hasSize(0));
@@ -237,42 +293,29 @@ class TilknyttedeJournalposterIT extends AbstractItest {
 	@Test
 	void shouldReturnJournalpostWithOneFilteredDokumentInfoWhenDenyOnPep5() throws Exception {
 		abacDenyPep5SkipPep2Pep3Pep4();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_dokumentinfo_pol_skjerming-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-skjerming-dokumentinfo-pol-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		assertThat(tilknyttedeJournalposter.get(0).getDokumenter(), hasSize(1));
+		assertThat(tilknyttedeJournalposter.get(0).getDokumenter().getFirst().getDokumentInfoId(), is("500000001"));
 	}
 
 	@Test
 	void shouldReturnSaksbehandlerTilgangFalseOnVariantWithDenyOnPep6d() throws Exception {
 		abacDenyPep6dSkipPep2Pep3Pep4Pep5();
-		stubFor(get("/hentjournalsakinfo/tilknyttedejournalposter/" + DOKUMENT_INFO_ID + "/GJENBRUK")
+		stubFor(get("/dokarkiv/tilknyttedeJournalposter/gjenbruk/dokumentInfoId/" + DOKUMENT_INFO_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("hentjournalsakinfo/tilknyttedejournalposter_variant_pol_skjerming-happy.json")));
+						.withBodyFile("safintern/tilknyttetjournalpost/tilknyttedejournalposter-skjerming-variant-pol-happy.json")));
 		stubFor(get("/gsak/" + GSAK_ID)
 				.willReturn(aResponse().withStatus(OK.value())
 						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
 						.withBodyFile("gsak/gsak-sakBySaksId_not_bid-happy.json")));
-		stubFor(post("/reststs")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("sts/sts-token.json")));
-		stubFor(post("/pdl")
-				.willReturn(aResponse().withStatus(OK.value())
-						.withHeader(CONTENT_TYPE, APPLICATION_JSON_VALUE)
-						.withBodyFile("pdl/hentPdlDataForIdent-happy.json")));
+		stubPdl();
 
 		List<Journalpost> tilknyttedeJournalposter = parseJournalpost(tilknyttedeJournalposterGjenbrukQuery());
 		DokumentInfo dokumentInfo = tilknyttedeJournalposter.get(0).getDokumenter().get(0);
